test/good/functions/var02.px

func call(()->Void proc) def
    proc()

func p1() def
    print "p1"

func p2() def
    print "p2"

call(p1)
call(p2)
