test/bad/classes/super05.px

func f(): Void def
    super()

f()
